--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -101,9 +101,7 @@ jobs:
       - name: Set pip cache path
         run: |
           export PIP_VER=$(python3 -m pip --version | grep -o '[0-9]*[.][0-9]*[.][0-9]*')
-          export PIP_CACHE_DIR=${PIP_CACHE_DIR}/${PIP_VER}
-        env:
-          PIP_CACHE_DIR: ${{ env.PIP_CACHE_DIR }}
+          echo "PIP_CACHE_DIR=${PIP_CACHE_DIR}/${PIP_VER}" >> $GITHUB_ENV
 
       - name: Install python dependencies
         run: |
