--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -99,9 +99,7 @@ jobs:
           python-version: '3.11'
 
       - name: Set pip cache path
-        run: |
-          export PIP_VER=$(python3 -m pip --version | grep -o '[0-9]*[.][0-9]*[.][0-9]*')
-          echo "PIP_CACHE_DIR=${PIP_CACHE_DIR}/${PIP_VER}" >> $GITHUB_ENV
+        run: echo "PIP_CACHE_DIR=${PIP_CACHE_DIR}/$(python3 -m pip --version | grep -o '[0-9]*[.][0-9]*[.][0-9]*')" >> $GITHUB_ENV
 
       - name: Install python dependencies
         run: |
