--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -30,7 +30,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  PIP_CACHE_DIR: /mount/caches/pip/linux
+  PIP_CACHE_PATH: /mount/caches/pip/linux
 
 jobs:
   Build:
@@ -97,14 +97,12 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
-      - name: Set pip cache path
-        run: echo "PIP_CACHE_DIR=${PIP_CACHE_DIR}/$(python3 -m pip --version | grep -o 'pip [0-9]*[.][0-9]*[.][0-9]*' | grep -o '[0-9].*')" >> $GITHUB_ENV
+      - name: Set PIP Cache Dir
+        run: echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/$(python3 -m pip --version | grep -o 'pip [0-9]*[.][0-9]*[.][0-9]*' | grep -o '[0-9].*')" >> $GITHUB_ENV
 
       - name: Install python dependencies
         run: |
           # For Python API: build and wheel packaging
-          echo $PIP_CACHE_DIR
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/wheel/requirements-dev.txt
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/src/compatibility/openvino/requirements-dev.txt
 
@@ -125,7 +123,7 @@ jobs:
       #
 
       - name: Setup cache dirs
-        run: mkdir -p ${CCACHE_DIR} ${PIP_CACHE_DIR}
+        run: mkdir -p ${CCACHE_DIR}
 
       - name: CMake configure - OpenVINO
         run: |
@@ -583,11 +581,10 @@ jobs:
       INSTALL_DIR: /__w/openvino/openvino/install
       INSTALL_TEST_DIR: /__w/openvino/openvino/install/tests
       LAYER_TESTS_INSTALL_DIR: /__w/openvino/openvino/install/tests/layer_tests
-      PIP_CACHE_DIR: /mount/caches/pip/linux
 
     steps:
       - name: Create Directories
-        run: mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR} ${PIP_CACHE_DIR}
+        run: mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR}
 
       - name: Install git
         run: |
@@ -606,6 +603,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      - name: Set PIP Cache Dir
+        run: echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/$(python3 -m pip --version | grep -o 'pip [0-9]*[.][0-9]*[.][0-9]*' | grep -o '[0-9].*')" >> $GITHUB_ENV
 
       - name: Install Python API tests dependencies
         run: |
@@ -952,7 +951,6 @@ jobs:
     env:
       INSTALL_DIR: ${{ github.workspace }}/install
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
-      PIP_CACHE_DIR: /mount/caches/pip/linux
       MODEL_HUB_TESTS_INSTALL_DIR: ${{ github.workspace }}/install/tests/model_hub_tests
 
     steps:
@@ -976,7 +974,7 @@ jobs:
           df -h
 
       - name: Create Directories
-        run: mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR} ${PIP_CACHE_DIR}
+        run: mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR}
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
@@ -1002,11 +1000,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
-      - name: Set pip cache path
-        run: |
-          export PIP_VER=$(python3 -m pip --version | grep -o '[0-9]*[.][0-9]*[.][0-9]*')
-          echo "PIP_CACHE_DIR=${PIP_CACHE_DIR}/${PIP_VER}" >> $GITHUB_ENV
+      - name: Set PIP Cache Dir
+        run: echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/$(python3 -m pip --version | grep -o 'pip [0-9]*[.][0-9]*[.][0-9]*' | grep -o '[0-9].*')" >> $GITHUB_ENV
 
       - name: Install OpenVINO Python wheels
         run: python3 -m pip install ${INSTALL_DIR}/tools/openvino-*
