--- a/.github/workflows/cleanup_pip_cache.yml
+++ b/.github/workflows/cleanup_pip_cache.yml
@@ -2,36 +2,30 @@ name: Cleanup PIP caches
 on:
   schedule:
     # at 00:00 on the 1st day of every month
-    # - cron: '0 0 1 * *'
-    # Every 10 minutes (to test only)
-    - cron: '*/5 * * * *'
+    - cron: '0 0 1 * *'
 
 jobs:
-  Cleanup_Linux_Cache:
+  Cleanup_PIP_Caches:
     runs-on: aks-linux-2-cores
     container:
       image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:20.04
       volumes:
         - /mount/caches:/mount/caches
     env:
-      PIP_CACHE_DIR: /mount/caches/pip/linux
+      PIP_CACHE_PATH: /mount/caches/pip
 
     steps:
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
       - name: Pre-Collecting Cache Info
         run: |
-          echo "Cache path: "
-          python3 -m pip cache dir
           echo "Cache info: "
-          python3 -m pip cache info
+          du -h -d0 ${PIP_CACHE_PATH}
 
       - name: Cleanup cache
-        run: python3 -m pip cache purge
+        run: |
+          echo "Removing pip caches"
+          [ ! -z "${PIP_CACHE_PATH}" ] && rm -r ${PIP_CACHE_PATH}/*
 
       - name: Post-Collecting Cache Info
         run: |
           echo "Cache info: "
-          python3 -m pip cache info
+          du -h -d0 ${PIP_CACHE_PATH}
