--- a/.github/workflows/cleanup_pip_cache.yml
+++ b/.github/workflows/cleanup_pip_cache.yml
@@ -18,14 +18,14 @@ jobs:
       - name: Pre-Collecting Cache Info
         run: |
           echo "Cache info: "
-          du -h -d0 ${PIP_CACHE_PATH}
+          du -h -d2 ${PIP_CACHE_PATH}
 
       - name: Cleanup cache
         run: |
           echo "Removing pip caches"
-          [ ! -z "${PIP_CACHE_PATH}" ] && rm -r ${PIP_CACHE_PATH}/*
+          [ ! -z "${PIP_CACHE_PATH}" ] && rm -rv ${PIP_CACHE_PATH}/*
 
       - name: Post-Collecting Cache Info
         run: |
           echo "Cache info: "
-          du -h -d0 ${PIP_CACHE_PATH}
+          du -h -d2 ${PIP_CACHE_PATH}
