--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1040,6 +1040,7 @@ jobs:
           if-no-files-found: 'error'
 
   Cleanup_PIP_Caches:
+    needs: Build
     runs-on: aks-linux-2-cores
     container:
       image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:20.04
@@ -1052,14 +1053,15 @@ jobs:
       - name: Pre-Collecting Cache Info
         run: |
           echo "Cache info: "
-          du -h -d0 ${PIP_CACHE_PATH}
+          du -h -d2 ${PIP_CACHE_PATH}
 
       - name: Cleanup cache
         run: |
           echo "Removing pip caches"
-          [ ! -z "${PIP_CACHE_PATH}" ] && rm -r ${PIP_CACHE_PATH}/*
+          [ ! -z "${PIP_CACHE_PATH}" ] && rm -rv ${PIP_CACHE_PATH}/*
 
       - name: Post-Collecting Cache Info
+        if: ${{ !cancelled() }}
         run: |
           echo "Cache info: "
-          du -h -d0 ${PIP_CACHE_PATH}
+          du -h -d2 ${PIP_CACHE_PATH}
