--- a/src/bindings/python/src/compatibility/openvino/inference_engine/CMakeLists.txt
+++ b/src/bindings/python/src/compatibility/openvino/inference_engine/CMakeLists.txt
@@ -28,6 +28,7 @@ if(OV_COMPILER_IS_CLANG OR CMAKE_COMPILER_IS_GNUCXX)
     if(OV_COMPILER_IS_CLANG)
         ov_add_compiler_flags(-Wno-parentheses-equality)
     endif()
+    ov_add_compiler_flags(-Wno-unused-variable)
 endif()
 if(UNUSED_BUT_SET_VARIABLE_SUPPORTED)
     ov_add_compiler_flags(-Wno-unused-but-set-variable)
