--- a/.github/workflows/code_style.yml
+++ b/.github/workflows/code_style.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Install Clang dependency
         run: |
           sudo apt update
-          sudo apt --assume-yes remove clang-7 clang-8 clang-9 clang-10 clang-11 clang-12 clang-13
+          sudo apt --assume-yes remove clang-7 clang-8 clang-9 clang-10 clang-11 clang-12 clang-13 clang-15
           sudo apt --assume-yes install clang-14 libclang-14-dev
 
       - name: Install Python-based dependencies
