--- a/.github/workflows/gather_cache_entries.yml
+++ b/.github/workflows/gather_cache_entries.yml
@@ -15,6 +15,7 @@ jobs:
     env:
       ARTIFACTS_DIR: ${{ github.workspace }}/artifacts
       CONFORMANCE_TOOLS_DIR: ${{ github.workspace }}/install/tests/functional_test_utils/layer_tests_summary
+      CONFORMANCE_CACHE_DIR: ${{ github.workspace }}/conformance_cache
       TEST_DEVICE: 'CPU'
 
     steps:
@@ -22,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create Artifacts Directory
-        run: mkdir -p ${{ env.ARTIFACTS_DIR }} ${{ env.CONFORMANCE_TOOLS_DIR }}
+        run: mkdir -p ${{ env.ARTIFACTS_DIR }} ${{ env.CONFORMANCE_TOOLS_DIR }} ${{ env.CONFORMANCE_CACHE_DIR }}
 
       - name: Show Context
         uses: actions/github-script@v6
@@ -44,13 +45,8 @@ jobs:
         with:
           script: |
             const fs = require('fs');
-            
-            // const restorePath = ['${{ env.CONFORMANCE_TOOLS_DIR }}/expected_failures_${{ env.TEST_DEVICE }}.csv']
-            
+                        
             const cache = require('@actions/cache');
-            // const key = 'Linux-conformance-OP-expected-failures-CPU'
-            // const cacheKey = await cache.restoreCache(restorePath, key, restoreKeys)
-            // console.log(cacheKey)
             
             const org = context.payload.organization.login
             const repositoryName = context.payload.repository.name
@@ -62,19 +58,25 @@ jobs:
             })
             console.log(JSON.stringify(conformanceCacheEntries))
             
+            const restorePath = '${{ env.CONFORMANCE_TOOLS_DIR }}/expected_failures_${{ env.TEST_DEVICE }}.csv'
+            
             // Download all cache entries
             for (const cacheEntryInfo of conformanceCacheEntries.data.actions_caches) {
               const cacheKey = cacheEntryInfo.key
-              const restorePath = `${{ env.CONFORMANCE_TOOLS_DIR }}/${cacheKey}`
+              const finalPath = `${{ env.CONFORMANCE_TOOLS_DIR }}/${cacheKey}/expected_failures_${{ env.TEST_DEVICE }}.csv`
             
               fs.mkdir(`${{ env.CONFORMANCE_TOOLS_DIR }}/${cacheKey}`, { recursive: true }, (err) => {
                 if (err) throw err;
               });
             
-              const restoredCacheKey = await cache.restoreCache(['${{ env.CONFORMANCE_TOOLS_DIR }}/expected_failures_${{ env.TEST_DEVICE }}.csv'], cacheKey, [])
+              const restoredCacheKey = await cache.restoreCache([restorePath], cacheKey, [])
               
               if (restoredCacheKey) {
-                console.log(`${cacheKey} was restored to ${restorePath}.`)
+                // Move downloaded cache to its final directory
+                fs.rename(restorePath, finalPath, function (err) {
+                  if (err) throw err
+                  console.log(`${cacheKey} was restored to ${finalPath}.`)
+                })
               }
             }
 
